- Minor css fix in general map query
git-svn-id: svn://svn.sundsvall.se/oep-dev@59 fcb98548-a2c4-3c4b-99c6-acc7aeb3bb18

--- a/queries/GeneralMapQuery/trunk/src/com/nordicpeak/flowengine/queries/generalmapquery/staticcontent/css/generalmapquery.css
+++ b/queries/GeneralMapQuery/trunk/src/com/nordicpeak/flowengine/queries/generalmapquery/staticcontent/css/generalmapquery.css
@@ -57,7 +57,7 @@
     z-index: 50;
     border-radius: 4px;
     box-shadow: 0 0 4px rgba(0, 0, 0, 0.15);
-    height: 500px !important;
+    max-height: 500px !important;
 }
 
 .mapquery-objectconfigwrapper span.header {
