- Added style to break long strings in event log table.
git-svn-id: svn://svn.sundsvall.se/oep-dev@64 fcb98548-a2c4-3c4b-99c6-acc7aeb3bb18

--- a/framework/trunk/src/com/nordicpeak/flowengine/staticcontent/css/flowengine.css
+++ b/framework/trunk/src/com/nordicpeak/flowengine/staticcontent/css/flowengine.css
@@ -107,6 +107,10 @@ table.oep-table tr.disabled td, table.oep-table tr.disabled td a {
 	color: #7b7b7b;
 }
 
+table.full.coloredtable.sortabletable.oep-table.flowfamilyeventstable {
+	word-break: break-all;
+}
+
 #sortingForm .affectedQuery {
 	background-color: #ffdddd;
 }
