- Avoid using FlowInstance/added - Improve user flow instance overview styling
git-svn-id: svn://svn.sundsvall.se/oep-dev@188 fcb98548-a2c4-3c4b-99c6-acc7aeb3bb18

--- a/framework/trunk/src/com/nordicpeak/flowengine/staticcontent/css/flowengine.css
+++ b/framework/trunk/src/com/nordicpeak/flowengine/staticcontent/css/flowengine.css
@@ -158,15 +158,15 @@ table.full.coloredtable.sortabletable.oep-table.flowfamilyeventstable {
   height: 15px; 
 }
 
-#FlowInstanceAdminModule .description strong.overview {
+#FlowInstanceAdminModule .description strong.overview, #UserFlowInstanceModule .description strong.overview {
 	
-	width: 120px;
+	width: 160px;
 	display: inline-block;
 }
 
 #FlowInstanceAdminModule .description span.overview {
 	
-	padding-left: 110px;
+	padding-left: 160px;
 	display: inline-block;
 }
 
