- Add ListFlowInstancesExtensionProvider - Move multisigning handler code from userflowinstance to handler module
git-svn-id: svn://svn.sundsvall.se/oep-dev@211 fcb98548-a2c4-3c4b-99c6-acc7aeb3bb18

--- a/framework/trunk/src/com/nordicpeak/flowengine/staticcontent/css/flowengine.css
+++ b/framework/trunk/src/com/nordicpeak/flowengine/staticcontent/css/flowengine.css
@@ -170,6 +170,10 @@ table.full.coloredtable.sortabletable.oep-table.flowfamilyeventstable {
 	display: inline-block;
 }
 
+.userflowinstances .errands-wrapper td.link a.btn:not(:last-child) {
+	margin-right: 3px;
+}
+
 .upload.active .uploaded-flowtype-icon, .upload:hover .uploaded-flowtype-icon {
   	background: #E5DEE8;
   	border-color: #611C7B;
