Made the rows in the tables containing flow instances clickable, which opens the instance (like the button does). - FlowInstanceAdminModuleTemplate: added class flowinstance-table to tables showing flow instances in order to style them separately from other tables - FlowInstanceAdminModuleTemplate: added location.href to rows in flowinstance tables to make them clickable - flowengine.css: added hover to flowinstance-table rows
git-svn-id: svn://svn.sundsvall.se/oep-dev@262 fcb98548-a2c4-3c4b-99c6-acc7aeb3bb18

--- a/framework/trunk/src/com/nordicpeak/flowengine/staticcontent/css/flowengine.css
+++ b/framework/trunk/src/com/nordicpeak/flowengine/staticcontent/css/flowengine.css
@@ -170,6 +170,11 @@ table.full.coloredtable.sortabletable.oep-table.flowfamilyeventstable {
 	display: inline-block;
 }
 
+#FlowInstanceAdminModule .errands-wrapper .oep-table.flowinstance-table tbody tr:hover td {
+	background: #dddddd !important;
+	cursor: pointer;
+}
+
 @media screen and (min-width: 766.99px) {
 	.userflowinstances .errands-wrapper td.link a.btn:not(:last-child) {
 		margin-right: 3px;
