- Css fix to avoid map config view to show even if no settings are available
git-svn-id: svn://svn.sundsvall.se/oep-dev@263 fcb98548-a2c4-3c4b-99c6-acc7aeb3bb18

--- a/queries/BaseMapQuery/trunk/src/com/nordicpeak/flowengine/queries/basemapquery/staticcontent/css/basemapquery.css
+++ b/queries/BaseMapQuery/trunk/src/com/nordicpeak/flowengine/queries/basemapquery/staticcontent/css/basemapquery.css
@@ -58,6 +58,7 @@
     border-radius: 4px;
     box-shadow: 0 0 4px rgba(0, 0, 0, 0.15);
     height: 500px !important;
+    visibility: hidden;
 }
 
 .mapquery-objectconfigwrapper span.header {
