- Fix flow overview scroll effect moving too far down
git-svn-id: svn://svn.sundsvall.se/oep-dev@312 fcb98548-a2c4-3c4b-99c6-acc7aeb3bb18

--- a/framework/trunk/src/com/nordicpeak/flowengine/staticcontent/css/flowengine.css
+++ b/framework/trunk/src/com/nordicpeak/flowengine/staticcontent/css/flowengine.css
@@ -234,3 +234,16 @@ table.full.coloredtable.sortabletable.oep-table.flowfamilyeventstable {
 	}
 
 }
+
+@media screen and (min-width: 1005px) {
+
+	.start-flow-panel.absolute {
+	    position: absolute;
+	    bottom: 0;
+	    max-width: 400px;
+	    padding-bottom: 25px;
+	    margin: 0;
+	    z-index: 100;
+	}
+
+}
