- Added message id and 50 characters of the message to flow instance event (2 attributes) to show part of message in history tab - Made message fragment in history tab link to the message in message tab
git-svn-id: svn://svn.sundsvall.se/oep-dev@313 fcb98548-a2c4-3c4b-99c6-acc7aeb3bb18

--- a/framework/trunk/src/com/nordicpeak/flowengine/staticcontent/css/flowengine.css
+++ b/framework/trunk/src/com/nordicpeak/flowengine/staticcontent/css/flowengine.css
@@ -175,6 +175,15 @@ table.full.coloredtable.sortabletable.oep-table.flowfamilyeventstable {
 	cursor: pointer;
 }
 
+
+#FlowBrowser a.messagelink {
+	color: #54646c;
+}
+
+#FlowInstanceAdminModule a.messagelink {
+	color: #54646c;
+}
+
 @media screen and (min-width: 766.99px) {
 	.userflowinstances .errands-wrapper td.link a.btn:not(:last-child) {
 		margin-right: 3px;
