- Implement requested changes
git-svn-id: svn://svn.sundsvall.se/oep-dev@348 fcb98548-a2c4-3c4b-99c6-acc7aeb3bb18

--- a/modules/PersonDataInformerModule/trunk/src/com/nordicpeak/flowengine/persondatasavinginformer/staticcontent/css/persondatainformer.e-samverkan.css
+++ b/modules/PersonDataInformerModule/trunk/src/com/nordicpeak/flowengine/persondatasavinginformer/staticcontent/css/persondatainformer.e-samverkan.css
@@ -3,3 +3,17 @@
 .filter-list.persondata ul li {
 	width: 215px !important;
 }
+
+#PersonDataInformer .flowtype-list .flow-list ul {
+	padding-left: 25px;
+	list-style-type: disc;
+}
+
+#PersonDataInformer .flowtype-list .flow-list ul li {
+	display: list-item;
+	margin: 0 !important;
+	padding: 0 !important;
+	min-height: unset;
+	width: auto;
+	background: unset;
+}
