--- a/framework/trunk/src/com/nordicpeak/flowengine/queries/textfieldquery/staticcontent/css/textfieldquery.css
+++ b/framework/trunk/src/com/nordicpeak/flowengine/queries/textfieldquery/staticcontent/css/textfieldquery.css
@@ -9,6 +9,10 @@
 	max-width: 200px;
 }
 
+.textfieldquery div.split.input-error.color i::after {
+	margin-left: -64px;
+}
+
 .textfieldquery input.color {
 	float: left;
 	margin-right: 10px;
