- Added mergeWithPreviousQuery to QueryDescriptor (bean, db-script, admin-xsl) to be able to visually group chosen queries together - Added css to group queries together when mergeWithPreviousQuery is set - Added lines to javascript to handle grouping
git-svn-id: svn://svn.sundsvall.se/oep-dev@387 fcb98548-a2c4-3c4b-99c6-acc7aeb3bb18

--- a/framework/trunk/src/com/nordicpeak/flowengine/staticcontent/css/flowengine.css
+++ b/framework/trunk/src/com/nordicpeak/flowengine/staticcontent/css/flowengine.css
@@ -256,3 +256,23 @@ table.full.coloredtable.sortabletable.oep-table.flowfamilyeventstable {
 	}
 
 }
+
+.query.mergewithpreviousquery > article {
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+    margin-top: 0;
+    padding-top: 0px;
+}
+
+.query.mergedquery > article {
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+}
+
+.receipt .query.mergewithpreviousquery > article {
+    border-top: none;
+}
+
+.receipt .query.mergedquery > article {
+	border-bottom: none;
+}
