--- a/modules/FlowInstancePDFGenerator/trunk/src/com/nordicpeak/flowengine/pdf/staticcontent/css/flowinstance.css
+++ b/modules/FlowInstancePDFGenerator/trunk/src/com/nordicpeak/flowengine/pdf/staticcontent/css/flowinstance.css
@@ -57,7 +57,21 @@ div.query{
 	margin-bottom: 15px;
 	padding-left: 15px;
 	padding-right: 15px;
-	page-break-inside: avoid; 	
+	page-break-inside: avoid;
+}
+
+div.query.mergewithpreviousquery{
+	border-top: 0px;
+}
+
+div.mergedquery {
+	margin: 0px;
+	padding: 0px;
+}
+
+div.mergedquery > div.query {
+	border-bottom: 0px;
+	margin-bottom: -20px;
 }
 
 div.query img {
