- When visually grouping queries, borders where shown between them in preview, this is now corrected
git-svn-id: svn://svn.sundsvall.se/oep-dev@412 fcb98548-a2c4-3c4b-99c6-acc7aeb3bb18

--- a/framework/trunk/src/com/nordicpeak/flowengine/staticcontent/css/flowengine.css
+++ b/framework/trunk/src/com/nordicpeak/flowengine/staticcontent/css/flowengine.css
@@ -272,7 +272,13 @@ table.full.coloredtable.sortabletable.oep-table.flowfamilyeventstable {
 .receipt .query.mergewithpreviousquery > article {
     border-top: none;
 }
+.preview .query.mergewithpreviousquery > article {
+    border-top: none;
+}
 
 .receipt .query.mergedquery > article {
+	border-bottom: none;
+}
+.preview .query.mergedquery > article {
 	border-bottom: none;
 }
