--- a/modules/PersonDataInformerModule/trunk/src/com/nordicpeak/flowengine/persondatasavinginformer/staticcontent/css/persondatainformer.css
+++ b/modules/PersonDataInformerModule/trunk/src/com/nordicpeak/flowengine/persondatasavinginformer/staticcontent/css/persondatainformer.css
@@ -7,3 +7,16 @@
 #PersonDataInformer .alternative label{
 	white-space: normal;
 }
+
+#PersonDataInformer fieldset {
+	padding-top: 0px;
+}
+
+	#PersonDataInformer fieldset i {
+		display: inline;
+	}
+
+#PersonDataInformer .alternative input[type=checkbox] {
+    vertical-align: top;
+    margin-top: 15px!important;
+}
