- Improve validation error placement
git-svn-id: svn://svn.sundsvall.se/oep-dev@702 fcb98548-a2c4-3c4b-99c6-acc7aeb3bb18

--- a/framework/trunk/src/com/nordicpeak/flowengine/queries/textfieldquery/staticcontent/css/textfieldquery.css
+++ b/framework/trunk/src/com/nordicpeak/flowengine/queries/textfieldquery/staticcontent/css/textfieldquery.css
@@ -9,8 +9,8 @@
 	max-width: 200px;
 }
 
-.textfieldquery div.split.input-error.color i::after {
-	margin-left: -64px;
+.textfieldquery div.split.input-error.color i {
+	right: 80px;
 }
 
 .textfieldquery input.color {
