- Center manager group icon
git-svn-id: svn://svn.sundsvall.se/oep-dev@753 fcb98548-a2c4-3c4b-99c6-acc7aeb3bb18

--- a/framework/branches/restrictedmanagers/src/com/nordicpeak/flowengine/staticcontent/css/flowengine.css
+++ b/framework/branches/restrictedmanagers/src/com/nordicpeak/flowengine/staticcontent/css/flowengine.css
@@ -170,6 +170,10 @@ table.full.coloredtable.sortabletable.oep-table.flowfamilyeventstable {
 	display: inline-block;
 }
 
+#FlowInstanceAdminModule ul.manager-list img.group-picture {
+	margin: 9.5px 9.5px;
+}
+
 #FlowInstanceAdminModule .errands-wrapper .oep-table.flowinstance-table tbody tr:hover td {
 	background: #dddddd !important;
 	cursor: pointer;
