--- a/framework/branches/restrictedmanagers/src/com/nordicpeak/flowengine/staticcontent/css/flowengine.css
+++ b/framework/branches/restrictedmanagers/src/com/nordicpeak/flowengine/staticcontent/css/flowengine.css
@@ -267,6 +267,12 @@ table.full.coloredtable.sortabletable.oep-table.flowfamilyeventstable {
     margin-top: 0;
     padding-top: 0px;
 }
+.query.mergewithpreviousquery > article > div.heading-wrapper {
+	margin-top: 10px;
+}
+.query.mergewithpreviousquery .info-box.error {
+	margin-top: 0px;
+}
 
 .query.mergedquery > article {
     border-bottom-left-radius: 0;
