--- a/framework/trunk/src/com/nordicpeak/flowengine/staticcontent/css/flowengine.css
+++ b/framework/trunk/src/com/nordicpeak/flowengine/staticcontent/css/flowengine.css
@@ -170,6 +170,10 @@ table.full.coloredtable.sortabletable.oep-table.flowfamilyeventstable {
 	display: inline-block;
 }
 
+#FlowInstanceAdminModule ul.manager-list img.group-picture {
+	margin: 9.5px 9.5px;
+}
+
 #FlowInstanceAdminModule .errands-wrapper .oep-table.flowinstance-table tbody tr:hover td {
 	background: #dddddd !important;
 	cursor: pointer;
@@ -287,6 +291,14 @@ table.full.coloredtable.sortabletable.oep-table.flowfamilyeventstable {
 }
 .preview .query.mergedquery > article {
 	border-bottom: none;
+}
+
+.flowadmin .automanagerassignment .usergrouplist-split > div, .featherlight-content .usergrouplist-split > div {
+	width: calc(50% - 5px)
+}
+
+.flowadmin .automanagerassignment .usergrouplist-split input.full[type = "text"], .featherlight-content .usergrouplist-split input.full[type = "text"] {
+	width: 100%;
 }
 
 /* fix for interface.css setting width:100% on small displays */ 
