- Fix css for radio button in featherlight modal
git-svn-id: svn://svn.sundsvall.se/oep-dev@923 fcb98548-a2c4-3c4b-99c6-acc7aeb3bb18

--- a/framework/trunk/src/com/nordicpeak/flowengine/staticcontent/css/flowengine.css
+++ b/framework/trunk/src/com/nordicpeak/flowengine/staticcontent/css/flowengine.css
@@ -306,7 +306,7 @@ table.full.coloredtable.sortabletable.oep-table.flowfamilyeventstable {
 	width: auto;
 }
 
-.featherlight-content input[type='checkbox'] {
+.featherlight-content input[type='checkbox'], .featherlight-content input[type='radio']  {
 	display: inline;
 	position: static;
 	opacity: 1;
