- Fix css for radio button in featherlight modal
git-svn-id: svn://svn.sundsvall.se/oep-dev@924 fcb98548-a2c4-3c4b-99c6-acc7aeb3bb18

--- a/framework/trunk/src/com/nordicpeak/flowengine/staticcontent/css/flowengine.css
+++ b/framework/trunk/src/com/nordicpeak/flowengine/staticcontent/css/flowengine.css
@@ -312,7 +312,7 @@ table.full.coloredtable.sortabletable.oep-table.flowfamilyeventstable {
 	opacity: 1;
 }
 
-.featherlight-content input[type="checkbox"]:checked + label::before {
+.featherlight-content input[type="checkbox"]:checked + label::before, .featherlight-content input[type="radio"]:checked + label::before {
 	font-family: unset;
 	content: unset;
 	font-size: unset;
