- Fixed GUI bug in flow overview (GDPR-info and read-more button)
git-svn-id: svn://svn.sundsvall.se/oep-dev@1041 fcb98548-a2c4-3c4b-99c6-acc7aeb3bb18

--- a/framework/trunk/src/com/nordicpeak/flowengine/staticcontent/css/flowengine.css
+++ b/framework/trunk/src/com/nordicpeak/flowengine/staticcontent/css/flowengine.css
@@ -327,3 +327,8 @@ table.full.coloredtable.sortabletable.oep-table.flowfamilyeventstable {
 	text-align: initial;
 	white-space: normal;
 }
+
+div.section-inside .description .btn-readmore {
+    bottom: 0px;
+    top: auto;
+}
