- FileUploadQuery: Added drag and drop, disabled in IE/Edge due to lack of ability to modify input files property
git-svn-id: svn://svn.sundsvall.se/oep-dev@1067 fcb98548-a2c4-3c4b-99c6-acc7aeb3bb18

--- a/framework/trunk/src/com/nordicpeak/flowengine/queries/fileuploadquery/staticcontent/css/fileuploadquery.css
+++ b/framework/trunk/src/com/nordicpeak/flowengine/queries/fileuploadquery/staticcontent/css/fileuploadquery.css
@@ -19,3 +19,8 @@ input[type="file"].fileuploader {
 	visibility: visible;
 	width: 90px;
 }
+
+.upload.no-hover:hover {
+  background: #fff;
+  border-color: #cacaca;
+}
