--- a/framework/trunk/src/com/nordicpeak/flowengine/queries/textfieldquery/staticcontent/css/textfieldquery.css
+++ b/framework/trunk/src/com/nordicpeak/flowengine/queries/textfieldquery/staticcontent/css/textfieldquery.css
@@ -20,6 +20,17 @@
 /* 	width: calc(100% - 117px) !important; 10px padding to colorpicker, 51px colorpicker, 56px textfield spacing  */
 }
 
+
+.textfieldquery .lettercounter {
+	margin-right: 5px;
+}
+
+@media screen and (min-width: 1203.99px) {
+	.textfieldquery .split:not(.odd) .lettercounter {
+		margin-right: 35px;
+	}
+}
+
 @media screen and (max-width: 1204px) {
 	.textfieldquery input.color {
 		width: calc(100% - 61px) !important; /* 10px padding to colorpicker, 51px colorpicker  */
@@ -37,18 +48,18 @@
 	}
 	
 	.textfieldquery .input-error i::after {
-    float: right;
-/*     display: inline-block; */
-    content: attr(title);
-/*     text-align: left; */
-    font-family: "Source Sans Pro",sans-serif;
-    font-size: 14px;
-    font-weight: 600;
-    margin-top: 8px;
-    margin-right: 5px;
-  }
-  
-  .textfieldquery .input-error input {
+		float: right;
+/* 		display: inline-block; */
+		content: attr(title);
+/* 		text-align: left; */
+		font-family: "Source Sans Pro",sans-serif;
+		font-size: 14px;
+		font-weight: 600;
+		margin-top: 8px;
+		margin-right: 5px;
+	}
+
+	.textfieldquery .input-error input {
 		padding: 12px !important;
 	}
 }
