- Add flow setting for flowInstanceAdmin flowOverview attributes
git-svn-id: svn://svn.sundsvall.se/oep-dev@1127 fcb98548-a2c4-3c4b-99c6-acc7aeb3bb18

--- a/framework/trunk/src/com/nordicpeak/flowengine/staticcontent/css/flowengine.css
+++ b/framework/trunk/src/com/nordicpeak/flowengine/staticcontent/css/flowengine.css
@@ -164,10 +164,8 @@ table.full.coloredtable.sortabletable.oep-table.flowfamilyeventstable {
 	display: inline-block;
 }
 
-#FlowInstanceAdminModule .description span.overview {
-	
+#FlowInstanceAdminModule .description div.overview {
 	padding-left: 160px;
-	display: inline-block;
 }
 
 #FlowInstanceAdminModule ul.manager-list img.group-picture {
