--- a/framework/trunk/src/com/nordicpeak/flowengine/flowsubmitsurveys/staticcontent/css/feedbacksurvey.css
+++ b/framework/trunk/src/com/nordicpeak/flowengine/flowsubmitsurveys/staticcontent/css/feedbacksurvey.css
@@ -26,7 +26,7 @@
 	width: inherit;
 }
 
-#FeedbackFlowSubmitSurvey .title-border {
+* ~ #FeedbackFlowSubmitSurvey .title-border {
 	border-top: 1px solid #b9e2c2;
     padding: 15px 0 0;
 }
