- Add FlowApprovalRounds - Support canceling and restarting activity groups
git-svn-id: svn://svn.sundsvall.se/oep-dev@1545 fcb98548-a2c4-3c4b-99c6-acc7aeb3bb18

--- a/modules/FlowApprovalModule/trunk/src/com/nordicpeak/flowengine/flowapprovalmodule/staticcontent/css/flowapprovalmanager.css
+++ b/modules/FlowApprovalModule/trunk/src/com/nordicpeak/flowengine/flowapprovalmodule/staticcontent/css/flowapprovalmanager.css
@@ -1,10 +1,20 @@
 @CHARSET "ISO-8859-1";
 
+#flow-approval table td {
+	border-bottom: none;
+	border-top: 1px solid #fff;
+}
+
 #flow-approval table tr.activitygroup td {
-	border-top: 1px solid black;	
+	border-top: 1px solid black;
 	border-top-color: black !important;
 }
 
-#flow-approval table tr.activity.last td {
-	border-bottom-color: black !important;
+#flow-approval table tr.activity + tr.activitygroup td {
+	border-top-color: black !important;
 }
+
+#flow-approval table tr.activity:last-child td {
+	border-bottom: 1px solid black !important;
+}
+
