- Add logo to PDF
git-svn-id: svn://svn.sundsvall.se/oep-dev@1593 fcb98548-a2c4-3c4b-99c6-acc7aeb3bb18

--- a/modules/FlowApprovalModule/trunk/src/com/nordicpeak/flowengine/flowapprovalmodule/staticcontent/css/pdf.css
+++ b/modules/FlowApprovalModule/trunk/src/com/nordicpeak/flowengine/flowapprovalmodule/staticcontent/css/pdf.css
@@ -20,6 +20,24 @@
     content: counter(pages);
 }
 
+div.header{
+}
+
+div.logo {
+	margin-bottom: 5px;
+	margin-right: 5px;
+}
+
+div.logo img {
+	height: 100px;
+	width: auto;
+	max-width: 100%;
+	
+/* 	height: auto; */
+/* 	width: 50px; */
+/* 	max-height: 100px; */
+}
+
 div.signatures {
 }
 
