--- a/framework/trunk/src/com/nordicpeak/flowengine/flowsubmitsurveys/staticcontent/css/feedbacksurvey.css
+++ b/framework/trunk/src/com/nordicpeak/flowengine/flowsubmitsurveys/staticcontent/css/feedbacksurvey.css
@@ -1,15 +1,18 @@
 @CHARSET "ISO-8859-1";
 
-#FeedbackFlowSubmitSurvey label.checkbox::before, #FeedbackFlowSubmitSurvey label.radio::before {
-	left: 50%;
-	bottom: -20px;
-	top: inherit;
+#FeedbackFlowSubmitSurvey {
+	max-width: 550px;
+}
+
+#FeedbackFlowSubmitSurvey h1 {
+	padding-top: 0;
+	padding-left: 0;
 }
 
 #FeedbackFlowSubmitSurvey .comment-wrapper {
 	margin-left: auto;
     margin-right: auto;
-    margin-top: 40px;
+    margin-top: 20px;
     text-align: right;
 }
 
@@ -18,7 +21,7 @@
 }
 
 #FeedbackFlowSubmitSurvey .alternative {
-	display: inline-block;
+	display: block;
 }
 
 #FeedbackFlowSubmitSurvey input[type="button"], #FeedbackFlowSubmitSurvey a.comment-btn {
@@ -33,25 +36,23 @@
 
 @media screen and (max-width: 625px) {
 	
-	#FeedbackFlowSubmitSurvey .alternative {
-		display: block;
-	}
-	
-	#FeedbackFlowSubmitSurvey label.checkbox::before, #FeedbackFlowSubmitSurvey label.radio::before {
-		left: 200px;
-		bottom: 0;
-		top: 0;
-	}
-	
-	#FeedbackFlowSubmitSurvey .inner {
-		text-align: left;
-	}
-	
 	#FeedbackFlowSubmitSurvey a {
 		margin-bottom: 5px;
 	}
 	
 	#FeedbackFlowSubmitSurvey input[type="button"] {
 		width: inherit;
+	}
+}
+
+@media screen and (max-width: 1204px) {
+	#FeedbackFlowSubmitSurvey {
+		padding-bottom: 18px;
+	}
+	#FeedbackFlowSubmitSurvey label.radio {
+		padding-top: 0px;
+	}
+	#FeedbackFlowSubmitSurvey label.radio::before {
+		margin-top: 0;
 	}
 }
