- Fix file input width in upload button
git-svn-id: svn://svn.sundsvall.se/oep-dev@1661 fcb98548-a2c4-3c4b-99c6-acc7aeb3bb18

--- a/framework/trunk/src/com/nordicpeak/flowengine/queries/fileuploadquery/staticcontent/css/fileuploadquery.css
+++ b/framework/trunk/src/com/nordicpeak/flowengine/queries/fileuploadquery/staticcontent/css/fileuploadquery.css
@@ -17,7 +17,7 @@ input[type="file"].fileuploader {
 	right: 0;
 	top: 0;
 	visibility: visible;
-	width: 90px;
+	width: 100%;
 }
 
 .upload.no-hover:hover {
