- Added reminder history in manager view
git-svn-id: svn://svn.sundsvall.se/oep-dev@1860 fcb98548-a2c4-3c4b-99c6-acc7aeb3bb18

--- a/modules/FlowApprovalModule/trunk/src/com/nordicpeak/flowengine/flowapprovalmodule/staticcontent/css/flowapprovalmanager.css
+++ b/modules/FlowApprovalModule/trunk/src/com/nordicpeak/flowengine/flowapprovalmodule/staticcontent/css/flowapprovalmanager.css
@@ -18,3 +18,14 @@
 	border-bottom: 1px solid black !important;
 }
 
+#flow-approval .history-button:focus {
+	outline: none;	
+}
+
+#flow-approval .history-button:after {
+	font-size: 33px;
+}
+
+#flow-approval a.history-button:hover {
+    color: #1b447c;
+}
