- Removed duplicated Javascript - Added HTML filtering support - Removed most Javascript eval statements
git-svn-id: svn://svn.sundsvall.se/oep-dev@1875 fcb98548-a2c4-3c4b-99c6-acc7aeb3bb18

--- a/framework/trunk/src/com/nordicpeak/flowengine/staticcontent/css/flowengine.css
+++ b/framework/trunk/src/com/nordicpeak/flowengine/staticcontent/css/flowengine.css
@@ -99,7 +99,7 @@ table.oep-table thead.sortable tr .header {
 	cursor: pointer;
 }
 
-table.oep-table thead.sortable th.headerSortDown span:after, table.oep-table thead.sortable th.headerSortUp span:after {
+table.oep-table thead.sortable th.tablesorter-headerDesc span:after, table.oep-table thead.sortable th.tablesorter-headerAsc span:after {
 	display: inline-block;
 }
 
