- Allow flow instance managers to change activity owners
git-svn-id: svn://svn.sundsvall.se/oep-dev@1887 fcb98548-a2c4-3c4b-99c6-acc7aeb3bb18

--- a/modules/FlowApprovalModule/trunk/src/com/nordicpeak/flowengine/flowapprovalmodule/staticcontent/css/flowapprovalmanager.css
+++ b/modules/FlowApprovalModule/trunk/src/com/nordicpeak/flowengine/flowapprovalmodule/staticcontent/css/flowapprovalmanager.css
@@ -27,5 +27,9 @@
 }
 
 #flow-approval a.history-button:hover {
-    color: #1b447c;
+	color: #1b447c;
+}
+
+.ui-autocomplete.ui-front {
+	z-index: 2147483647;
 }
