--- a/queries/ChildQueryProvider/trunk/src/com/nordicpeak/flowengine/queries/childquery/staticcontent/css/childquery.css
+++ b/queries/ChildQueryProvider/trunk/src/com/nordicpeak/flowengine/queries/childquery/staticcontent/css/childquery.css
@@ -26,7 +26,7 @@
 @media screen and (min-width: 767px) {
 	.childquery .alternative {
 		float: left;
-		width: 25%;
+		width: auto;
 		min-width: 200px;
 	}
 	
