- Minor change for compatibility with jQuery UI 1.12
git-svn-id: svn://svn.sundsvall.se/oep-dev@1999 fcb98548-a2c4-3c4b-99c6-acc7aeb3bb18

--- a/framework/trunk/src/com/nordicpeak/flowengine/utils/flowfamilylist/staticcontent/css/FlowFamilyList.css
+++ b/framework/trunk/src/com/nordicpeak/flowengine/utils/flowfamilylist/staticcontent/css/FlowFamilyList.css
@@ -29,7 +29,7 @@ ul.ui-autocomplete li.ui-menu-item {
 	width: 100%;
 }
 
-ul.ui-autocomplete li.ui-menu-item a {
+ul.ui-autocomplete li.ui-menu-item div {
 	display: block;
 	line-height: 1.5;
 	text-decoration: none;
@@ -38,7 +38,7 @@ ul.ui-autocomplete li.ui-menu-item a {
 	cursor: pointer;
 }
 
-ul.ui-autocomplete li.ui-menu-item a:hover, ul.ui-autocomplete li.ui-menu-item a.ui-state-focus {
+ul.ui-autocomplete li.ui-menu-item div:hover, ul.ui-autocomplete li.ui-menu-item div.ui-state-active {
 	color: #477cce;
 	background: #f6f6f6;
 	border-top: none;
@@ -47,7 +47,7 @@ ul.ui-autocomplete li.ui-menu-item a:hover, ul.ui-autocomplete li.ui-menu-item a
 	border-bottom: 1px solid #E6E6E6;
 }
 
-ul.ui-autocomplete li.ui-menu-item a.ui-corner-all {
+ul.ui-autocomplete li.ui-menu-item div.ui-corner-all {
 	border-radius: 0;
 }
 
