- Minor change due to jQuery UI update
git-svn-id: svn://svn.sundsvall.se/oep-dev@2015 fcb98548-a2c4-3c4b-99c6-acc7aeb3bb18

--- a/framework/trunk/src/com/nordicpeak/flowengine/utils/flowfamilylist/staticcontent/css/FlowFamilyList.css
+++ b/framework/trunk/src/com/nordicpeak/flowengine/utils/flowfamilylist/staticcontent/css/FlowFamilyList.css
@@ -51,7 +51,7 @@ ul.ui-autocomplete li.ui-menu-item div.ui-corner-all {
 	border-radius: 0;
 }
 
-span.ui-helper-hidden-accessible {
+.ui-helper-hidden-accessible {
 	display: none;
 }
 
