Added functionality to disable activity. Added functionality to insert link to flowinstance as information.
git-svn-id: svn://svn.sundsvall.se/oep-dev@2080 fcb98548-a2c4-3c4b-99c6-acc7aeb3bb18

--- a/modules/FlowApprovalModule/trunk/src/com/nordicpeak/flowengine/flowapprovalmodule/staticcontent/css/flowapprovaladmin.css
+++ b/modules/FlowApprovalModule/trunk/src/com/nordicpeak/flowengine/flowapprovalmodule/staticcontent/css/flowapprovaladmin.css
@@ -62,3 +62,12 @@ ul.ui-autocomplete li.ui-menu-item div.ui-corner-all {
 .ui-autocomplete-input {
 	margin-top: 5px;
 }
+
+.red {
+	color:red !important;
+}
+
+.vertical-align {
+	vertical-align: top;
+}
+
