- Fix for tooltip
git-svn-id: svn://svn.sundsvall.se/oep-dev@2154 fcb98548-a2c4-3c4b-99c6-acc7aeb3bb18

--- a/framework/trunk/src/com/nordicpeak/flowengine/staticcontent/css/flowengine.css
+++ b/framework/trunk/src/com/nordicpeak/flowengine/staticcontent/css/flowengine.css
@@ -27,6 +27,10 @@
   left: 15px !important;
 }
 
+.ui-helper-hidden-accessible{
+	display: none;
+}
+
 #FlowBrowser .freeTextAlternativeValue {
 	margin-top: 5px;
 	margin-left: 3px;
